tests/negative/neg_pr1162_removed_named_exit.safe
package neg_PR1162_Removed_Named_Exit

   function build returns integer

      loop
         exit Outer;
      return 0;
